--- a/sass/_skeleton.scss
+++ b/sass/_skeleton.scss
@@ -12,95 +12,123 @@
 
 /* #Variable Definitions
 ================================================== */
-    $base-width: 960px;
-    $tablet-width: 768px;
-    $mobile-portrait-width: 300px;
-    $mobile-landscape-width: 420px;
+$base-width: 1140px;
+$tablet-width: 768px;
+$mobile-landscape-width: 480px;
+$mobile-portrait-width: 300px;
 
-    $num-columns: 16;
-    $margin: 10px;
+$num-columns: 16;
+$margin: 10px;
 
 /* Grid
 ================================================== */
-    @function skeleton-third-width($num: 1, $width: $base-width) {
-        @return $num * ($width / 3) - (2 * $margin); }
+@function skeleton-third-width($num: 1, $width: $base-width) {
+    @return $num * ($width / 3) - (2 * $margin);
+}
 
-    @function skeleton-column-width($num: 1, $width: $base-width) {
-        @return ($num * ($width / $num-columns)) - (2 * $margin); }
+@function skeleton-column-width($num: 1, $width: $base-width) {
+    @return ($num * ($width / $num-columns)) - (2 * $margin);
+}
 
-    @mixin container {
-        position: relative;
-        margin: 0 auto;
-        padding: 0;
-        width: $base-width;
+@mixin container {
+    position: relative;
+    margin: 0 auto;
+    padding: 0;
+    width: $base-width;
 
-        &:after {
-            content: "\0020";
-            display: block;
-            height: 0;
-            clear: both;
-            visibility: hidden; }
+    &:after {
+        content: "\0020";
+        display: block;
+        height: 0;
+        clear: both;
+        visibility: hidden;
+    }
 
-        @media only screen and (min-width: 768px) and (max-width: 959px) {
-            width: $tablet-width; }
+    @media only screen and (min-width: $tablet-width) and (max-width: $base-width - 1) {
+        width: $tablet-width;
+    }
 
-        @media only screen and (max-width: 767px) {
-            width: $mobile-portrait-width; }
+    @media only screen and (max-width: $tablet-width - 1) {
+        width: $mobile-portrait-width;
+    }
 
-        @media only screen and (min-width: 480px) and (max-width: 767px) {
-            width: $mobile-landscape-width; } }
+    @media only screen and (min-width: $mobile-landscape-width) and (max-width: $tablet-width - 1) {
+        width: $mobile-landscape-width;
+    }
+}
 
-    @mixin column {
-        float: left;
-        display: inline;
-        margin-left: $margin;
-        margin-right: $margin;
+@mixin column {
+    float: left;
+    display: inline;
+    margin-left: $margin;
+    margin-right: $margin;
 
-        @media only screen and (max-width: 767px) { margin: 0; } }
+    @media only screen and (max-width: $tablet-width - 1) {
+        margin-left: 0;
+        margin-right: 0;
+        margin-bottom: $margin;
+    }
+}
 
-    @mixin row {
-        @include clearfix;
-        margin-bottom: 2 * $margin; }
+@mixin row {
+    @include clearfix;
+    margin-bottom: 2 * $margin;
+}
 
-    @mixin alpha { margin-left: 0; }
-    @mixin omega { margin-right: 0; }
+@mixin alpha {
+    margin-left: 0;
+}
 
-    @mixin columns($num: 1) {
-        @include column;
-        width: skeleton-column-width($num, $base-width);
+@mixin omega {
+    margin-right: 0;
+}
 
-        @media only screen and (min-width: 768px) and (max-width: 959px) {
-            width: skeleton-column-width($num, $tablet-width); }
+@mixin columns($num: 1) {
+    @include column;
+    width: skeleton-column-width($num, $base-width);
 
-        @media only screen and (max-width: 767px) {
-            width: $mobile-portrait-width; }
+    @media only screen and (min-width: $tablet-width) and (max-width: $base-width - 1) {
+        width: skeleton-column-width($num, $tablet-width);
+    }
 
-        @media only screen and (min-width: 480px) and (max-width: 767px) {
-            width: $mobile-landscape-width; } }
+    @media only screen and (max-width: $tablet-width - 1) {
+        width: $mobile-portrait-width;
+    }
 
-    @mixin third($num: 1) {
-        @include column;
-        width: skeleton-third-width($num, $base-width);
+    @media only screen and (min-width: $mobile-landscape-width) and (max-width: $tablet-width - 1) {
+        width: $mobile-landscape-width;
+    }
+}
 
-        @media only screen and (min-width: 768px) and (max-width: 959px) {
-            width: skeleton-third-width($num, $tablet-width); }
+@mixin third($num: 1) {
+    @include column;
+    width: skeleton-third-width($num, $base-width);
 
-        @media only screen and (max-width: 767px) {
-            width: $mobile-portrait-width; }
+    @media only screen and (min-width: $tablet-width) and (max-width: $base-width - 1) {
+        width: skeleton-third-width($num, $tablet-width);
+    }
 
-        @media only screen and (min-width: 480px) and (max-width: 767px) {
-            width: $mobile-landscape-width; }}
+    @media only screen and (max-width: $tablet-width - 1) {
+        width: $mobile-portrait-width;
+    }
 
-    @mixin offset($num: 1) {
-        $offset: 2 * $margin;
-        padding-left: skeleton-column-width($num, $base-width) + $offset;
+    @media only screen and (min-width: $mobile-landscape-width) and (max-width: $tablet-width - 1) {
+        width: $mobile-landscape-width;
+    }
+}
 
-        @media only screen and (min-width: 768px) and (max-width: 959px) {
-            padding-left: skeleton-column-width($num, $tablet-width) + $offset; }
+@mixin offset($num: 1) {
+    $offset: 2 * $margin;
+    padding-left: skeleton-column-width($num, $base-width) + $offset;
 
-        @media only screen and (max-width: 767px) {
-            padding-left: 0; } }
+    @media only screen and (min-width: $tablet-width) and (max-width: $base-width - 1) {
+        padding-left: skeleton-column-width($num, $tablet-width) + $offset;
+    }
 
+    @media only screen and (max-width: $tablet-width - 1) {
+        padding-left: 0;
+    }
+}
 
 /* #Clearing
 ================================================== */
@@ -108,14 +136,18 @@
 or wrap each row of columns in a @include row */
 @mixin clearfix {
     zoom: 1;
-    &:after { clear: both; }
+    &:after {
+        clear: both;
+    }
     &:before, &:after {
         content: '\0020';
         display: block;
         overflow: hidden;
         visibility: hidden;
         width: 0;
-        height: 0; } }
+        height: 0;
+    }
+}
 
 /* You can also use a @include clear to clear columns */
 @mixin clear {
@@ -124,5 +156,5 @@ or wrap each row of columns in a @include row */
     overflow: hidden;
     visibility: hidden;
     width: 0;
-    height: 0; }
-
+    height: 0;
+}
