--- a/sass/_highlight.scss
+++ b/sass/_highlight.scss
@@ -1,6 +1,6 @@
 @import "compass/css3"
 
-@mixin highlight($bg:$nav-background){
+@mixin highlight($bg){
 	@include background-image(
 		linear-gradient(
 			color-stops(
